--- a/templates/produto/index.html.twig
+++ b/templates/produto/index.html.twig
@@ -1,7 +1,34 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Listagem de Produtos - {% endblock %}
 
 {% block body %}
-    
+
+    <h1>Listagem de Produtos</h1>
+
+    <a href="" class="btn btn-primary btn-lg mt-4 mb-4">Adicionar Produto</a>
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Nome</th>
+                <th>Preço</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                {% for produto in produtos %}
+                    <td>{{ produto.id }}</td>
+                    <td>{{ produto.nome }}</td>
+                    <td>{{ produto.preco }}</td>
+                    <td>
+                        <a class="btn btn-sm btn-warning" href=""><i class="fa fa-eye"></i></a>
+                        <a class="btn btn-sm btn-success" href=""><i class="fa fa-pen"></i></a>
+                        <a class="btn btn-sm btn-danger" href=""><i class="fa fa-trash"></i></a>
+                    </td>
+                {% endfor %}
+            </tr>
+        </tbody>
+    </table>
+
 {% endblock %}
