--- a/templates/produto/index.html.twig
+++ b/templates/produto/index.html.twig
@@ -11,7 +11,7 @@
     
     <h1>Listagem de Produtos</h1>
 
-    <a href="" class="btn btn-primary btn-lg mt-4 mb-4">Adicionar Produto</a>
+    <a href="{{ path('cadastrar_produto') }}" class="btn btn-primary btn-lg mt-4 mb-4">Adicionar Produto</a>
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -29,7 +29,7 @@
                     <td>{{ produto.preco }}</td>
                     <td>
                         <a class="btn btn-sm btn-warning" href=""><i class="fa fa-eye"></i></a>
-                        <a class="btn btn-sm btn-success" href=""><i class="fa fa-pen"></i></a>
+                        <a class="btn btn-sm btn-success" href="{{ path('editar_produto', {'id': produto.id}) }}"><i class="fa fa-pen"></i></a>
                         <a class="btn btn-sm btn-danger" href=""><i class="fa fa-trash"></i></a>
                     </td>
                 </tr>
