Adicionado botão para voltar à página inicial.

--- a/templates/produto/view.html.twig
+++ b/templates/produto/view.html.twig
@@ -26,4 +26,6 @@
         </tbody>
     </table>
 
+    <a href="{{ path('listar_produto') }}" class="btn btn-primary btn-lg mt-4 mb-4">Início</a>
+
 {% endblock %}
