Criando um CRUD de produtos - Exclusão.

--- a/templates/produto/index.html.twig
+++ b/templates/produto/index.html.twig
@@ -3,8 +3,14 @@
 
 {% block body %}
 
-    {% for flashMessage in app.session.flashbag.get('sucesso') %}
+    {% for flashMessage in app.session.flashbag.get('sucess') %}
         <div class="alert alert-success">
+            {{ flashMessage }}
+        </div>
+    {% endfor %}
+
+    {% for flashMessage in app.session.flashbag.get('warning') %}
+        <div class="alert alert-danger">
             {{ flashMessage }}
         </div>
     {% endfor %}
@@ -30,7 +36,7 @@
                     <td>
                         <a class="btn btn-sm btn-warning" href="{{ path('visualizar_produto', {'id': produto.id}) }}"><i class="fa fa-eye"></i></a>
                         <a class="btn btn-sm btn-success" href="{{ path('editar_produto', {'id': produto.id}) }}"><i class="fa fa-pen"></i></a>
-                        <a class="btn btn-sm btn-danger" href=""><i class="fa fa-trash"></i></a>
+                        <a class="btn btn-sm btn-danger" id="btn_excluir_produto" href="{{ path('apagar_produto', {'id': produto.id}) }}"><i class="fa fa-trash"></i></a>
                     </td>
                 </tr>
             {% endfor %}
