Ajustes, dicas e considerações finais.

--- a/templates/produto/view.html.twig
+++ b/templates/produto/view.html.twig
@@ -17,11 +17,11 @@
             </tr>
             <tr>
                 <th>Preço</th>
-                <td>{{ produto.preco }}</td>
+                <td>R$ {{ produto.preco|number_format(2, ",", ".") }}</td>
             </tr>
             <tr>
                 <th>Descrição</th>
-                <td>{{ produto.descricao }}</td>
+                <td>{{ produto.descricao|nl2br }}</td>
             </tr>
         </tbody>
     </table>
